Fixed warnings
- Removed unused imports
- Fixed deprecated calls
- Fixed unused variables